/*
 * This file was generated by the Gradle 'init' task.
 */
import java.net.URI
import java.nio.file.*
import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    // id("buildlogic.java-application-conventions")
    id("java")                                    // Java 插件
    //id("application")                             // Application 插件
    id("com.gradleup.shadow") version "8.3.9"  // Shadow 插件
}

repositories {
    mavenCentral()
}

dependencies {
    //implementation("org.apache.commons:commons-text")
    //implementation(project(":utilities"))
    
    implementation("com.fasterxml.jackson.core:jackson-databind:2.16.0")
    implementation("com.fasterxml.jackson.core:jackson-core:2.16.0")
    implementation("com.fasterxml.jackson.core:jackson-annotations:2.16.0")
    implementation("org.jline:jline:3.21.0")
    
    /*testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.10.0")
    implementation("com.google.guava:guava:33.2.0-jre")*/
}

val mainClass = "com.github.oolongmc.application.ZhihuCrawler.Main"

/*application {
    // 定义应用程序的主类
    mainClass = "com.github.oolongmc.application.ZhihuCrawler.Main"
}*/


tasks.named<com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar>("shadowJar") {
    // 配置 shadowJar
    archiveBaseName.set("${project.name}")
    archiveClassifier.set("")
    archiveVersion.set("")
    
    // 合并服务文件（比如 SPI 服务提供者）
    mergeServiceFiles()
    
    // 排除某些不需要的文件
    exclude("META-INF/*.RSA", "META-INF/*.SF", "META-INF/*.DSA")
    
    // 设置 manifest
    manifest {
        attributes(
            "Main-Class" to mainClass,
            "Implementation-Title" to project.name,
            "Implementation-Version" to project.version
        )
    }
}

tasks.named("shadowJar") {
    finalizedBy("awa")
}

tasks.register("awa") {
    dependsOn("shadowJar")
    
    val sourceTargetDir = "src"
    
    // 需要排除的目录名
    val excludeDirs = setOf<String>(
        "build",
        "releases",
        "Collection",
        "OolongPrivateFiles"
    )
    
    // 需要排除的子路径
    val excludePaths = setOf<String>()
    
    // 放到 JAR 根目录的文件名列表
    val rootLevelFiles = setOf<String>(
        "CHANGELOG.md",
        "README.md"
    )
    
    // 需要排除的隐藏文件
    val excludeHiddenFiles = false
    
    // 额外需要排除的文件名
    val excludeFiles = setOf<String>(
        "local.properties",
        "cookie.txt",
        "tmp"
    )
    
    val projectDirPath = project.projectDir.toPath()
    val shadowJarTask = tasks.getByName<ShadowJar>("shadowJar")
    val jarFileProvider = shadowJarTask.archiveFile
    
    doLast {
        val jarFile = jarFileProvider.get().asFile
        
        val uri = URI.create("jar:${jarFile.toURI()}")
        FileSystems.newFileSystem(uri, mapOf("create" to "false")).use { fs ->
            
            projectDirPath.toFile().walkTopDown()
                .filter { it.isFile }
                .filter { file ->
                    val relativePath = projectDirPath.relativize(file.toPath()).toString()
                    val fileName = file.name
                    
                    // 检查是否在排除的目录中
                    val inExcludedDir = excludeDirs.any { dir ->
                        relativePath.startsWith("$dir/") || relativePath == dir
                    }
                    
                    // 检查是否在排除的路径中
                    val inExcludedPath = excludePaths.any { path ->
                        relativePath.startsWith("$path/") || relativePath == path
                    }
                    
                    // 检查是否是隐藏文件
                    val isHidden = excludeHiddenFiles && fileName.startsWith(".")
                    
                    // 检查是否在排除的文件列表中
                    val isExcludedFile = excludeFiles.contains(fileName)
                    
                    !inExcludedDir && !inExcludedPath && !isHidden && !isExcludedFile
                }
                .forEach { file ->
                    val relativePath = projectDirPath.relativize(file.toPath()).toString()
                    val fileName = file.name
                    
                    // 判断是否放到根目录
                    val isRootLevel = rootLevelFiles.any { it.equals(fileName, ignoreCase = true) }
                    
                    if (isRootLevel) {
                        // 放到 JAR 根目录
                        val targetPath = fs.getPath("/$fileName")
                        Files.copy(file.toPath(), targetPath, StandardCopyOption.REPLACE_EXISTING)
                    } else {
                        // 放到 /src/ 目录下
                        val targetPath = fs.getPath("/$sourceTargetDir/$relativePath")
                        Files.createDirectories(targetPath.parent)
                        Files.copy(file.toPath(), targetPath, StandardCopyOption.REPLACE_EXISTING)
                    }
                }
        }
    }
}

// awa 执行完后触发 buildInfo
tasks.named("awa") {
    finalizedBy("buildInfo")
}

tasks.register("buildInfo") {
    // 在配置阶段捕获 jarFile 的 provider
    val shadowJarTask = tasks.getByName<ShadowJar>("shadowJar")
    val jarFileProvider = shadowJarTask.archiveFile
    
    doLast {
        println("\u001B[1;92mBuild Done")
        
        val jarFile = jarFileProvider.get().asFile
        
        println("\u001B[1;92mFile:\u001B[0m ${jarFile.absolutePath}")
        println("\u001B[1;92mSize:\u001B[0m ${jarFile.length() / 1024} KB")
    }
}

// build 只需要依赖 shadowJar 就够了，后面的任务会被 finalizedBy 自动触发
tasks.named("build") {
    dependsOn("shadowJar")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}
